# classificador_telegram

./: .env.example  .gitignore  README.md  pyproject.toml
src/: classifier.py  create_app.py  handlers.py  main.py  settings.py
